<resources>
    <string name="app_name">FinalProject</string>
    <string name="no_account">No account?</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="class_consultation">Class Consultation</string>
    <string name="login">Login</string>
    <string name="loginButtonLabel">Login</string>
    <string name="consultImage">TODO</string>
    <string name="consultation_class2">Consultation Class</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Signup</string>

    <string name="todo2">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="birthday_mm_dd_yyyy">Birthday (MM/DD/YYYY)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="id">ID</string>
    <string name="register_as_student">Register As Student</string>
    <string name="register_as_teacher">Register As Teacher</string>
    <string name="reminderText">Hello, please fill in the necessary information before proceeding.</string>
    <string name="last_name">Last Name</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todoa">TODO</string>
    <string name="edit">Edit</string>
    <string name="year_level">Year Level</string>
    <string name="student_id">Student ID</string>
    <string name="email_address">Email Address</string>
    <string name="todo3">TODO</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="e_g_gmeet_zoom">(E.g. Gmeet, Zoom)</string>
    <string name="start">Start:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_00_002">00:00:00</string>
    <string name="title">Title:</string>
    <string name="event_title">Event Title</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="date">Date:</string>
    <string name="end">End:</string>
    <string name="venue">Venue:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="recipient">Recipient</string>
    <string name="email2">Email:</string>
    <string name="message">Message:</string>
    <string name="emailLabel">EMAIL</string>
    <string name="lblSubeject">Subject:</string>
    <string name="proceed">Proceed</string>
    <string name="reason_for_message">Reason for message...</string>
    <string name="recipient_email">Recipient Email</string>
    <string name="enter_message_here">Enter message here...</string>
    <string name="post_a_query">Post a Query</string>
    <string name="titleq">Title</string>
    <string name="enter_query_title">Enter query title...</string>
    <string name="provide_details_of_your_query">Provide details of your query...</string>
    <string name="post">post</string>
    <string name="course">Course</string>
    <string name="enter_course_code_here">Enter course code here...</string>
    <string name="employee_id">Employee ID</string>
    <string name="year_level_e_g_3rd_year">Year Level (E.g. 3rd year)</string>
    <string name="gallery">Gallery</string>
    <string name="before_proceeding_please_set_up_a_profile_picture">Before proceeding, please set up a profile picture.</string>
    <string name="back">Back</string>
    <string name="manage_post">Manage Post</string>
    <string name="titlemanage">Title</string>
    <string name="search">Search</string>
    <string name="enter_title">Enter title...</string>
    <string name="by">By</string>
    <string name="query_details_are_displayed_here">Query details are displayed here...</string>
    <string name="post_user_is_displayed_here">Post user is displayed here...</string>
    <string name="details">Details</string>
    <string name="reply">Reply</string>
    <string name="enter_reply">Enter reply...</string>
    <string name="delete_post">Delete post</string>
    <string name="send">Send</string>

    <string-array name="programs">
        <item>--Select Program--</item>
        <item>BSCS</item>
        <item>BSIT</item>
        <item>BSCpE</item>
    </string-array>
</resources>