<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email">

    <TextView
        android:id="@+id/emailLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/email2"
        android:textColor="#02335A"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblSubeject"
        android:textColor="#02335A"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inSubject"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/messagelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/message"
        android:textColor="#02335A"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inMessage"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/recipient_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inSubject"
        app:layout_constraintTop_toBottomOf="@+id/titlePage"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inMessage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_message_here"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/messagelbl"
        app:layout_constraintTop_toBottomOf="@+id/inSubject"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/inSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/reason_for_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inMessage"
        app:layout_constraintTop_toBottomOf="@+id/inEmail"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/titlePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/emailLabel"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/clearMsg"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/proceedToGmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/proceed"
        app:layout_constraintBaseline_toBaselineOf="@+id/clearMsg"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/proceedToGmail"
        app:layout_constraintStart_toEndOf="@+id/btnCancelMsg"
        app:layout_constraintTop_toBottomOf="@+id/inMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>